--- a/css/styles.css
+++ b/css/styles.css
@@ -104,6 +104,8 @@ ul {
 .contacts--footer {
   flex-direction: column;
   gap: 9px;
+
+  color: var(--color-text-gray);
 }
 
 .contacts__address {
@@ -115,11 +117,17 @@ ul {
   display: flex;
   align-items: center;
 
-  font-weight: 500;
   font-size: 14px;
+  font-weight: 400;
+  line-height: 21px;
+  font-style: normal;
 
   color: var(--color-text-gray);
   transition: color 250ms;
+}
+
+.contacts__link--address {
+  color: #fff;
 }
 
 .contacts__link:hover {
@@ -300,14 +308,4 @@ ul {
 }
 
 .footer__content {
-}
-
-.contacts--footer {
-  color: var(--color-text-gray);
-}
-
-.contacts {
-  font-size: 14px;
-  font-weight: 400;
-  line-height: 21px;
 }
