--- a/css/styles.css
+++ b/css/styles.css
@@ -6,19 +6,12 @@
   --color-text-white: #ffffff;
 }
 
-html {
+body {
+  margin: 0;
+
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   color: var(--color-text-black);
-}
-
-a {
-  text-decoration: none;
-  color: inherit;
-}
-
-body {
-  margin: 0;
 }
 
 ol,
@@ -26,6 +19,11 @@ ul {
   margin: 0;
   padding: 0;
   list-style: none;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
 
 .container {
@@ -92,7 +90,8 @@ ul {
   transition: color 250ms;
 }
 
-.nav__link:hover {
+.nav__link:hover,
+.nav__link:focus {
   color: var(--color-text-blue);
 }
 
@@ -118,7 +117,6 @@ ul {
   align-items: center;
 
   font-size: 14px;
-  font-weight: 400;
   line-height: 21px;
   font-style: normal;
 
@@ -130,7 +128,8 @@ ul {
   color: #fff;
 }
 
-.contacts__link:hover {
+.contacts__link:hover,
+.contacts__link:focus {
   color: var(--color-text-blue);
 }
 
@@ -164,15 +163,18 @@ ul {
   width: 216px;
   height: 50px;
 
-  border: none;
-  border-radius: 4px;
-
-  color: #fff;
   font-weight: 700;
   font-size: 16px;
   line-height: 30px;
   letter-spacing: 0.96px;
+
+  border: none;
+  border-radius: 4px;
+
   background-color: var(--color-text-blue);
+  color: #fff;
+
+  cursor: pointer;
 }
 
 .features {
@@ -201,7 +203,6 @@ ul {
   margin: 0;
 
   font-size: 14px;
-  font-weight: 400;
   line-height: 24px;
   letter-spacing: 0.03em;
 
@@ -289,7 +290,6 @@ ul {
   margin: 0;
 
   font-size: 16px;
-  font-weight: 400;
   line-height: 18.75px;
   letter-spacing: 0.03em;
 
